--- a/user/src/App.css
+++ b/user/src/App.css
@@ -37,8 +37,6 @@ td {
 
 #search {
   border: 6px;
-  width: 400px;
-
   margin-bottom: 10px;
 }
 
@@ -55,21 +53,31 @@ td {
 /*here is a test to see how changes would look*/
 
 .dataSearch {
-  background-color: rgb(238, 237, 237);
-
+  /* background-color: rgb(238, 237, 237);
+  background-color: transparent;
   margin-left: 30px;
   margin-bottom: 4em;
   border-radius: 8px;
   text-align: center;
   font-size: 23px;
-  padding: 4px 0px 4px 0px;
+  padding: 4px 0px 4px 0px;*/
 }
-
+/*
 .searchForm {
   width: 100%;
   margin-left: 30%;
+  position: relative;
+  margin: auto;
+  width: 100%;
+  max-width: 480px;
+  border-radius: 13px;
+  overflow: hidden;
 }
-
+.searchForm .dataSearch {
+  position: relative;
+  top: 20px;
+  left: 12px;
+}*/
 /*here is text for the adding new data fields */
 
 .titleTwo {
@@ -87,7 +95,8 @@ td {
 }
 
 .newInput {
-  background-color: rgb(238, 237, 237);
+  /*background-color: rgb(238, 237, 237);*/
+  background-color: transparent;
   margin-left: 30px;
   margin-bottom: 4em;
   border-radius: 8px;
@@ -106,14 +115,76 @@ td {
   font-size: 20px;
   width: 100px;
 }
+.searchForm {
+  background-color: transparent;
+  position: relative;
+  margin: auto;
+  width: 100%;
+  max-width: 600px;
+  border-radius: 13px;
+  overflow: hidden;
+}
+.searchForm .label {
+  position: absolute;
+  top: 20px;
+  left: 12px;
+  font-size: 22px;
+  color: rgba(0, 0, 0, 0.5);
+  font-weight: 500;
+  transform-origin: 0 0;
+  transform: translate3d(0, 0, 0);
+  transition: all 0.2s ease;
+  pointer-events: none;
+}
+.searchForm .focus-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  transform: scaleX(0);
+  transform-origin: left;
+}
+.searchForm .dataSearch {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 100%;
+  border: 0;
+  font-family: inherit;
+  padding: 16px 12px 0 12px;
+  height: 56px;
+  font-size: 20px;
+  font-weight: 400;
+  background-color: transparent;
+  box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 0.3);
+  color: #000;
+  transition: all 0.15s ease;
+}
+.searchForm input:hover {
+  box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 5.5);
+}
 
+.searchForm .dataSearch:focus {
+  /*background: rgba(0, 0, 0, 0.05);*/
+  outline: none;
+  box-shadow: inset 0 -2px 0 #0077ff;
+}
+.searchForm .dataSearch:focus + .label {
+  color: #0077ff;
+  transform: translate3d(0, -12px, 0) scale(0.75);
+}
+.searchForm .dataSearch:hover {
+  box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 5.5);
+}
 /**/
 
 .inp {
   position: relative;
   margin: auto;
   width: 100%;
-  max-width: 280px;
+  max-width: 680px;
   border-radius: 13px;
   overflow: hidden;
 }
@@ -156,7 +227,7 @@ td {
   transition: all 0.15s ease;
 }
 .inp input:hover {
-  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0 -2px 0 rgba(0, 0, 0, 5.5);
 }
 
 .inp input:focus {
